main.css
* {
    padding: 0;
    margin: 0;
}
p,ul,ol{
margin-top: 6px;
margin-bottom: 6px;
}
ul,ol{
padding-left:10px;
margin-left:10px;
}
body{
    overflow:hidden;
font-family: sans-serif;
font-size: 0.8em;
background: #c77;
}
td{
font-size: 0.8em;
}
canvas, img{
vertical-align:bottom;
}
.tilewall[tilemoving]{
cursor: move;
}
.bar{
position: fixed;
top: 20px;
bottom: 20px;
background: #000;
width: 9px;
left: 353px;
}
.bar[state="closed"]{
left: 0px;
}
.bar:hover{
width: 15px;
background: #500;
border: 2px solid #fff;
left: 348px;
}
.bar:hover[state="closed"]{
left: -3px;
}
.side_panel{
position: fixed;
left:0px;
top:0px;
display: table;
border-spacing: 5px;
width: 355px;
height: 100%;
}
.side_panel[state="closed"]{
display: none;
}
.side_panel_row{
display:table-row;
overflow:auto;
background: #EEE;
position: relative;
-webkit-user-select: none;
-khtml-user-select: none;
-moz-user-select: -moz-none;
-o-user-select: none;
user-select: none;
}
.last_side_panel_row_inner{
left:0px;
top:0px;
display: table;
border-spacing: 0px;
width: 100%;
height: 100%;
}
.last_side_panel_row_head{
display:table-row;
overflow:auto;
}
.last_side_panel_row_body{
display:table-row;
overflow:auto;
height: 100%;
}
.button_area{
min-height: 20px;
max-height: 100px;
}
#action_panel{
max-height: 200px;
overflow-y: scroll;
width: 100%;
}
#files_panel{
max-height: 300px;
overflow-y: scroll;
width: 100%;
overflow-x: hidden;
}
#info_panel{
width: 100%;
max-height: 400px;
}
.side_panel_row:last-of-type{
height: 100%;
}
.scrollable_area{
overflow-y: scroll;
height: 100%;
}
.tile{
border: 1px solid #CCC;
display: inline-block;
position: relative;
overflow: hidden;
transform: rotateY(0);
-webkit-transform: rotateY(0);
min-width: 98px;
min-height: 128px;
}
.tile[moving]{
border-width: 10px;
border-color: #000;
background: #888;
z-index: 100;
opacity:0.5;
pointer-events: none;
}
.tile[placeholder]{
background: #8F8;
pointer-events:none;
}
#works_with_chrome{
position: absolute;
right: 20px;
bottom: 20px;
text-align: right;
}
#works_with_chrome > img{
vertical-align: text-top;
}
.tile-over{
visibility: hidden;
position: absolute;
top: 0px;
left: 0px;
right: 0px;
bottom: 0px;
}
.tile-caption{
position: absolute;
bottom: 5px;
left: 5px;
right: 5px;
text-align: center;
background-color:rgba(255,255,255,0.5);
border: 1px solid #FFAD33;
}
.tile:hover:not([moving]):not([splitting]){
background: #888;
border-color: #FFAD33;
}
.tile[proximate]{
border-color: #8F8;
}
.pending{
background: #FCC;
}
.pending:hover{
background: #FAA;
}
.tile:hover .tile-over{
visibility: visible;
}

.file_drop{
position: fixed;
left: 0px;
right: 0px;
top: 0px;
bottom: 0px;
border: 5px dashed #999;
padding: 5px;
display: block;
text-align: center;
background: #e6e6e6;
color: #888;
z-index: 100;
}
.file_drop_text{
margin: auto;
position: absolute;
height: 100px;
bottom: 0px;
top: 0px;
left: 0px;
right: 0px;
}

.action{
color: #900;
border: 1px solid #900;
margin: 5px;
padding: 2px;
}
.undo{
background: #900;
padding-left: 5px;
padding-right: 5px;
font-weight: bold;
height: 15px;
float: right;
color: #fff;
cursor: pointer;
top: 8px;
left: -10px;
position: relative;
-webkit-user-select: none;
-khtml-user-select: none;
-moz-user-select: -moz-none;
-o-user-select: none;
user-select: none;
}
.undo:hover{
background: #500;
color: #fff;
}
.collapsable_panel[state="closed"]{
	height: 5px;
	overflow-y: hidden;
	overflow-x: hidden;
}
.toggle_panel{
background: #000;
width: 52px;
height: 12px;
position: absolute;
right: 15px;
margin-top: 2px;
transform:translateY(-5px);
-webkit-transform:translateY(-5px);
-ms-transform:translateY(-5px);
}
.toggle_panel:hover{
width: 48px;
height: 14px;
background: #500;
border: 2px solid #fff;
margin-top:0;
}
.file_info_title{
margin-top: 5px;
}
.header_field_name{
color: #500;
font-weight: bold;
}
.header_field_value{
color: #500;
}
.tilewall{
position: fixed;
top: 5px;
bottom: 5px;
right: 5px;
padding: 5px;
background: #EEE;
overflow-y:auto;
overflow-x:hidden;
-webkit-user-select: none;
-khtml-user-select: none;
-moz-user-select: -moz-none;
-o-user-select: none;
user-select: none;
cursor: default;
left: 365px;
}
.tilewall[state="closed"]{
left: 10px;
}
::-webkit-scrollbar {
width: 10px;
height: 10px;
}
::-webkit-scrollbar-button {
width: 0;
height: 0;
display: none;
}
::-webkit-scrollbar-thumb {
background-color: #999;
-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.8),
					inset 0 -1px 0 rgba(0,0,0,0.3);
}

.button_group {
width: 100%;
margin: 3px;
font-size:0;
}
.button_group > *{
font-size: 12px;
}

.button{
background: #CCC;
text-align: center;
padding: 5px 10px 5px 10px;
margin: 2px;
display: inline-block;
cursor: default;
}
.button:hover{
font-color: #C77;
border: 1px #C77 solid;
padding: 4px 9px 4px 9px;
}
.button[checked],
.button[active]{
background: #DDD;
border: 1px #000 solid;
padding: 4px 9px 4px 9px;
}
input[type="text"]{
text-align: center;
}
.widget-moving{
cursor: none;
}

/*shake css from daneden.me */
@-webkit-keyframes shake{0%,100%{-webkit-transform:translateX(0)}10%,30%,50%,70%,90%{-webkit-transform:translateX(-10px)}20%,40%,60%,80%{-webkit-transform:translateX(10px)}}@-moz-keyframes shake{0%,100%{-moz-transform:translateX(0)}10%,30%,50%,70%,90%{-moz-transform:translateX(-10px)}20%,40%,60%,80%{-moz-transform:translateX(10px)}}@-o-keyframes shake{0%,100%{-o-transform:translateX(0)}10%,30%,50%,70%,90%{-o-transform:translateX(-10px)}20%,40%,60%,80%{-o-transform:translateX(10px)}}@keyframes shake{0%,100%{transform:translateX(0)}10%,30%,50%,70%,90%{transform:translateX(-10px)}20%,40%,60%,80%{transform:translateX(10px)}}.shake{-webkit-animation-name:shake;-moz-animation-name:shake;-o-animation-name:shake;animation-name:shake;
-webkit-animation-duration: 1s;
	-moz-animation-duration: 1s;
	-ms-animation-duration: 1s;
	-o-animation-duration: 1s;
	animation-duration: 1s;}
button{
border: 1px solid #900;
color: #900;
padding: 5px 15px 5px 15px;
margin: 0px 2px 0px 2px;
}
button:hover{
background: #C77;
color: #FFF;
}
button:active{
background: #900;
border-color: #000;
}
.help_background{
position: fixed;
left:0px;
right:0px;
top:0px;
bottom:0px;
background: #000;
opacity:0.5;
z-index: 101;
}
.help_panel_wrapper{
position: absolute;
top: 10px;
bottom: 10px;
left: 0px;
right: 0px;
z-index: 102;
}
.help_panel{
position: relative;
margin: 0 auto;
max-width: 640px;
min-width: 200px;
background: #FFF;
height: 100%;
}
.close_help_button{
position: absolute;
top: 5px;
right: 5px;
}
.help_title{
position: absolute;
top: 5px;
left: 5px;
right: 80px;
background: #DDD;
margin: 2px;
padding: 5px;
border: 1px solid #000;
font-weight: bold;
}
.help_body{
position: absolute;
top: 45px;
left: 5px;
right: 5px;
bottom: 2px;
overflow-y: scroll;
margin-left: 20px;
padding-right: 20px;
}
.notes{
font-size:0.8em;
}
.file_group_title{
font-weight: bold;
color: #900;
}
.tet_group{
display: inline;
}
.file_brick{
display: inline-block;
border: 2px #000 solid;
padding: 2px;
margin: 2px;
background: #ddd;
cursor: default;
}
.cut_file_brick{
background: #fbb;
border-color: #500;
color: #500;
}

.file_group[active] > .tet_group[active] > .cut_file_brick:hover,
.file_group[active] > .tet_group[active] > .cut_file_brick[active]{
background: #500;
color: #fff;
}
.pos_file_brick,
.set_file_brick{
background: #ddb550;
border-color: #552510;
color: #552510;
}
.new_cut_file_brick{
background: #bbF;
border-color: #005;
color: #005;
}
.file_group[active] > .tet_group[active] > .new_cut_file_brick:hover,
.file_group[active] > .tet_group[active] > .new_cut_file_brick[active]{
background: #005;
color: #fff;
}

#filestem_caption{
text-align:left;
}
.tet_group:not([active]) > div:not(:hover){
width: 2px;
font-size:0;
}
input[type="text"]{
padding: 3px 0px 3px 0px;
}
#header_search{
float: right;
}

.tile[disabled]{
pointer-events: none;
}

.tile > .blind{
position: absolute;
left: 0px;
right: 0px;
top: 0px;
bottom: 0px;
z-index: 100;
background: rgba(0,0,0,0.5);
display: none;
}
.tile[disabled] > .blind{
display: block;
}
.tile[separating] > .blind{
display: none;
}
.tile[separating] > .tile-over{
visibility: visible;
}
.separator_half{
    display: inline-block;
}
#cluster_panel > canvas{
margin: 2px;
border: 1px solid #000;
}

.floatinginfo{
position: fixed;
left: 400px;
top: 20px;
min-width: 200px;
max-width: 400px;
min-height: 80px;
background-color: rgba(255,255,255,0.8);
border: solid 2px #000;
padding: 5px;
display:none;
z-index:100;

}

html[dragging]>* {
pointer-events: none;
}
html[dragging]{
cursor:move;
}
button:hover + .floatinginfo,
label:hover + .floatinginfo,
div:hover + .floatinginfo,
.floatinginfo[state="closed"]{
display: block;
}
pre{
font-size: 1.2em;
margin-left: 15px;
}
#filesystem_buttons{
position: absolute;
left: 20px;
bottom: 20px;
text-align: left;
}
.tetrode_title{
display: inline-block;
padding-right: 5px;
}
.file_group{
display: block;
text-align: left;
-webkit-user-select: none;
-khtml-user-select: none;
-moz-user-select: -moz-none;
-o-user-select: none;
user-select: none;
}


.tree{
  border: 0px;
  text-align:center;
  border-collapse:collapse;
  cursor: default;
}
.tree .node{
    position: relative;
}
.tree .node:hover{
   color: #F00;
}
.tree .node[modtwo="0"]:after{ /* due to empty tds cannot use nth of type selectors */
  height: 1px;
  background: #c00;
  content: "";
  width: 50%;
  display: block;  
  position: absolute;
  top: 0px;
  left: 0px;
}
.tree .node[modtwo="1"]:after{
  height: 1px;
  background: #c00;
  content: "";
  width: 50%;
  position: absolute;
  top: 0px;
  left: 50%;
  display: block;  
}
.tree .node:before{
  height: 100%;
  background: #c00;
  content: "";
  width: 1px;
  position: absolute;
  left:50%;
  display: block;
  top:0px;
  z-index:-1;
}
.tree .node[isroot]:before{
  height: 50%;
  background: #c00;
  content: "";
  width: 1px;
  position: absolute;
  left:50%;
  display: block;
  top:50%;
  z-index:-1;
}
.tree .node[colspan="1"]:before{
  height: 50%;
  background: #c00;
  content: "";
  width: 1px;
  position: absolute;
  left:50%;
  display: block;
  top:0px;
  z-index:-1;
}

.autocut_info{
max-width: none;
}

